# ArvisSocketIOTwQT

./: .gitignore  CMakeLists.txt  README.md  arvis-iot.service  config.ini  deviceconnector.cpp  deviceconnector.h  main.cpp  websocketserver.cpp  websocketserver.h
